--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AirDnd</title>
+  <title><%= yield(:title)%></title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a id="nav" class="navbar-brand" href="/">AirDnD</a>
+      </div>
+      <div>
+        <ul class="nav navbar-nav">
+          <li> <%= link_to "About", users_path %> </li>
+          <li><a href="/">dead link</a> </li>
 
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <% if current_user %>
+            <li><%=link_to current_user.email, user_path(current_user.id) %></li>
+            <li><%=link_to 'Log out', destroy_user_session_path, :method => :delete %></li>
+
+          <%else%>
+            <li><%=link_to 'Sign-in', new_user_session_path%></li>
+            <li><%=link_to 'Register', new_user_registration_path%></li>
+          <%end%>
+        </ul>
+      </div>
+    </div>
+  </nav>
+<div class="container">
+  <% if flash[:notice] %>
+    <div class="alert alert-success alert-dismissible" role="alert">
+      <%= flash[:notice] %>
+    </div>
+  <% end %>
+  <% if flash[:alert] %>
+    <div class="alert alert-danger alert-dismissible" role="alert">
+      <%= flash[:alert] %>
+    </div>
+  <% end %>
 <%= yield %>
-
+</div>
 </body>
 </html>
