--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,10 @@
       <div>
         <ul class="nav navbar-nav">
           <li> <%= link_to "About", users_path %> </li>
-          <li><a href="/">dead link</a> </li>
-
+          <li> <%= link_to "All Dwellings", units_path %> </li>
+          <% if current_user %>
+            <li><%=link_to 'Add Dwelling', new_unit_path %></li>
+          <% end %>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <% if current_user %>
