--- a/app/views/units/_form.html.erb
+++ b/app/views/units/_form.html.erb
@@ -12,7 +12,7 @@
   <%= f.text_field :city, placeholder: 'Add Name'  %>
   <%= f.text_field :state, placeholder: 'Add Name'  %>
   <%= f.text_field :zip, placeholder: 'Add Name'  %>
-  
-  <%= f.submit 'Answer', data:{disable_with: 'Answering....'}, class: 'btn btn-primary btn-block' %>
+
+  <%= f.submit 'Add', data:{disable_with: 'Adding....'}, class: 'btn btn-primary btn-block' %>
 
 <% end %>
