--- a/app/views/units/new.html.erb
+++ b/app/views/units/new.html.erb
@@ -1,3 +1,5 @@
-<h2>Add new dwelling</h2>
 
+<div class="panel panel-default">
+<h2 class="text-center">Add New Dwelling</h2>
 <%= render "form" %>
+</div>
