--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,24 +23,63 @@
 
  @import "bootswatch/darkly/bootswatch";
 
-body {
+$primary-color: #046380;
+
+header{
   background-image: image-url('background.jpg');
-  -webkit-background-size: cover;
-          -moz-background-size: cover;
-          -o-background-size: cover;
-          background-size: cover;
-          background-repeat: no-repeat;
+  min-height:400px;
+  background-size:cover;
+  background-position: center;
+
+}
+
+body {
+  margin: 0px;
 }
 
 form {
   padding: 5px;
-  color: #FFFFFF;
+  color: $primary-color;
 }
 
 .panel {
   padding: 5px;
+  background: #A7A37E ;
+  border: #A7A37E;
 }
 
 .img-responsive {
   margin: 0 auto;
+}
+
+a {
+  color: #046380 !important;
+}
+
+.navbar-default .navbar-nav > li > a:hover {
+  background: #FF9800;
+}
+
+.navbar-default {
+  background: #91AA9D;
+}
+
+.well {
+  background: #002F2F;
+  border: #263248;
+  min-height: 300px;
+  padding: 5px;
+
+}
+
+h1.page-header.text-center {
+  color: $primary-color;
+}
+
+h1, h2, h3, h4, h5, h6, p, p.lead, {
+  color: $primary-color;
+}
+
+.container {
+  padding-top:10px;
 }
