--- a/app/views/units/index.html.erb
+++ b/app/views/units/index.html.erb
@@ -1,14 +1,14 @@
 <h1 class="page-header text-center">Dwellings for Plundering</h1>
 
 <% @units.in_groups_of(2, false).each do  |units| %>
-  <div class="row">
+  <div class="row ">
     <% units.each do |unit| %>
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <div class="well">
         <%= link_to unit do %>
-          <p class="lead text-center">  <%= unit.name %></p>
+          <p id="text" class="lead text-center">  <%= unit.name %></p>
           <% if unit.photos.any? %>
-            <%= image_tag(unit.photos.first.avatar.url(:thumb), class: 'img-responsive') %>
+            <%= image_tag(unit.photos.first.avatar.url(:medium), class: 'img-responsive') %>
           <% else %>
             <%= image_tag('house.png', class: 'img-responsive') %>
           <% end %>
