Add cancancan role and view fixes

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,6 +5,10 @@
 
   <div class="field">
 <br />
+    <%= f.text_field :name, autofocus: true %>
+  </div>
+  <div class="field">
+<br />
     <%= f.email_field :email, autofocus: true %>
   </div>
 
