--- a/app/views/units/show.html.erb
+++ b/app/views/units/show.html.erb
@@ -18,7 +18,8 @@
   <%end %>
 <% end %>
 
-
-<p>
-  <%= link_to "Add new photo", new_unit_photo_path(@unit), class: 'btn btn-secondary', id: 'add-danger' %>
-</p>
+<% if can? :create, Photo %>
+  <p>
+    <%= link_to "Add new photo", new_unit_photo_path(@unit), class: 'btn btn-secondary', id: 'add-danger' %>
+  </p>
+<% end %>
