--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -4,3 +4,10 @@
 
  <h3>Check in date: <%= @reservation.start_date %> </h3>
 <h3> Check out date: <%= @reservation.end_date %> </h3>
+
+
+<%= link_to 'Change reservation', edit_unit_reservation_path(@unit, @reservation) %>
+
+<%= link_to "Delete this reservation", unit_reservation_path(@unit, @reservation), class: "btn btn-danger",
+                                                      data: { prompt: 'Are you sure?',
+                                                              method: 'delete'} %>
