--- a/app/views/units/show.html.erb
+++ b/app/views/units/show.html.erb
@@ -26,17 +26,45 @@
   </div>
   <%end %>
 <% end %>
-<h3>This unit has <%= @unit.reservations.length %> upcoming reservations</h3>
 
-<ul>
-  <% @unit.reservations.each do |reservation| %>
-  <li>
-    <h3> <%= link_to "Reservation from #{reservation.start_date} to #{reservation.end_date}", reservation_path(reservation) %> </h3>
-  </li>
-  <% end %>
-</ul>
+<% if @unit.reservations.any? %>
+<div class="col-md-5 col-md-offset-4">
+  <h3>Future Reservations</h3>
+  <table class="table-striped table-bordered table-responsive">
+      <tr>
+        <th>
+          Reservations
+        </th>
+        <th>
+          Check-in date:
+        </th>
+        <th>
+          Check out-date:
+        </th>
+      </tr>
+    <% @unit.reservations.each do |reservation| %>
+      <%= link_to reservation_path(reservation) do %>
+        <tr>
+          <td>
+            <%= reservation.id %>
+          </td>
+          <td class="active">
+            <%= reservation.start_date %>
+          </td>
+          <td class="warning">
+            <%= reservation.end_date %>
+          </td>
+        </tr>
+      <% end %>
+    <% end %>
+  </table>
+</div>
 
+<% else %>
 
+<h3>No reservations have been made at this time.</h3>
+
+<% end %>
 <% if can? :create, Reservation %>
 <%= link_to "Reserve this dwelling", new_unit_reservation_path(@unit) %>
 <% end %>
